# LI1-Crossy-Road

./: 2022li1g094.cabal  README.md
src/: Fase1.hs  LI12223.hi  LI12223.hs  Main.hi  Main.hs  Tarefa1_2022li1g094.hs  Tarefa2_2022li1g094.hi  Tarefa2_2022li1g094.hs  Tarefa3_2022li1g094.hi  Tarefa3_2022li1g094.hs  Tarefa4_2022li1g094.hs  Tarefa5_2022li1g094.hi  Tarefa5_2022li1g094.hs
tests/: Spec.hs  Tarefa1_2022li1g094_Spec.hs  Tarefa2_2022li1g094_Spec.hs  Tarefa3_2022li1g094_Spec.hs  Tarefa4_2022li1g094_Spec.hs
